# sfml-skeleton

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/modules/: FindPugiXML.cmake
config/: fonts.xml  textures.xml
include/skeleton/core/: Application.hpp  ArgumentParser.hpp  ResourceHandler.hpp
src/: main.cpp
src/core/: Application.cpp
src/skeleton/core/: Application.cpp
